fixed overflowing of hyperspeed bg

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ canvas {
   touch-action: none;
 }
 
+#lights canvas {
+  width: 100%;
+  height: 100%;
+}
+
 /* UI Layers */
 .screen {
   position: absolute;
